// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly in serverless mode 1`] = `
<CollapsiblePanel
  iconType="logoElasticsearch"
  title="Elasticsearch"
>
  <EuiDescribedFormGroup
    description={
      <p>
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Manage the actions this role can perform against your cluster. "
          id="xpack.security.management.editRole.elasticSearchPrivileges.manageRoleActionsDescription"
        />
        <EuiLink
          className="editRole__learnMore"
          href="https://www.elastic.co/guide/en/elasticsearch/reference/mocked-test-branch/security-privileges.html#privileges-list-cluster"
          target="_blank"
        >
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Learn more"
            id="xpack.security.management.editRole.elasticSearchPrivileges.learnMoreLinkText"
          />
        </EuiLink>
      </p>
    }
    title={
      <h3>
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Cluster privileges"
          id="xpack.security.management.editRole.elasticSearchPrivileges.clusterPrivilegesTitle"
        />
      </h3>
    }
  >
    <EuiFormRow
      fullWidth={true}
      hasEmptyLabelSpace={true}
    >
      <ClusterPrivileges
        builtinClusterPrivileges={
          Array [
            "all",
            "manage",
            "monitor",
          ]
        }
        editable={true}
        onChange={[Function]}
        role={
          Object {
            "elasticsearch": Object {
              "cluster": Array [],
              "indices": Array [],
              "remote_cluster": Array [],
              "run_as": Array [],
            },
            "kibana": Array [],
            "name": "",
          }
        }
      />
    </EuiFormRow>
  </EuiDescribedFormGroup>
  <EuiSpacer />
  <EuiTitle
    size="xs"
  >
    <h3>
      <MemoizedFormattedMessage
        defaultMessage="Index privileges"
        id="xpack.security.management.editRole.elasticSearchPrivileges.indexPrivilegesTitle"
      />
    </h3>
  </EuiTitle>
  <EuiSpacer
    size="s"
  />
  <EuiText
    color="subdued"
    size="s"
  >
    <p>
      <MemoizedFormattedMessage
        defaultMessage="Control access to the data in your cluster. "
        id="xpack.security.management.editRole.elasticSearchPrivileges.controlAccessToClusterDataDescription"
      />
      <EuiLink
        className="editRole__learnMore"
        href="https://www.elastic.co/guide/en/elasticsearch/reference/mocked-test-branch/security-privileges.html#privileges-list-indices"
        target="_blank"
      >
        <MemoizedFormattedMessage
          defaultMessage="Learn more"
          id="xpack.security.management.editRole.elasticSearchPrivileges.learnMoreLinkText"
        />
      </EuiLink>
    </p>
  </EuiText>
  <IndexPrivileges
    availableIndexPrivileges={
      Array [
        "all",
        "read",
        "write",
        "index",
      ]
    }
    editable={true}
    indexPatterns={Array []}
    indexType="indices"
    indicesAPIClient={
      Object {
        "getFields": [MockFunction],
      }
    }
    license={
      Object {
        "features$": Observable {
          "_subscribe": [Function],
        },
        "getFeatures": [MockFunction],
        "getLicenseType": [MockFunction],
        "getUnavailableReason": [MockFunction],
        "hasAtLeast": [MockFunction],
        "isEnabled": [MockFunction],
        "isLicenseAvailable": [MockFunction],
      }
    }
    onChange={[MockFunction]}
    role={
      Object {
        "elasticsearch": Object {
          "cluster": Array [],
          "indices": Array [],
          "remote_cluster": Array [],
          "run_as": Array [],
        },
        "kibana": Array [],
        "name": "",
      }
    }
    validator={
      RoleValidator {
        "buildFlavor": "serverless",
        "shouldValidate": undefined,
      }
    }
  />
</CollapsiblePanel>
`;

exports[`it renders without crashing 1`] = `
<CollapsiblePanel
  iconType="logoElasticsearch"
  title="Elasticsearch"
>
  <EuiDescribedFormGroup
    description={
      <p>
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Manage the actions this role can perform against your cluster. "
          id="xpack.security.management.editRole.elasticSearchPrivileges.manageRoleActionsDescription"
        />
        <EuiLink
          className="editRole__learnMore"
          href="https://www.elastic.co/guide/en/elasticsearch/reference/mocked-test-branch/security-privileges.html#privileges-list-cluster"
          target="_blank"
        >
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Learn more"
            id="xpack.security.management.editRole.elasticSearchPrivileges.learnMoreLinkText"
          />
        </EuiLink>
      </p>
    }
    title={
      <h3>
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Cluster privileges"
          id="xpack.security.management.editRole.elasticSearchPrivileges.clusterPrivilegesTitle"
        />
      </h3>
    }
  >
    <EuiFormRow
      fullWidth={true}
      hasEmptyLabelSpace={true}
    >
      <ClusterPrivileges
        builtinClusterPrivileges={
          Array [
            "all",
            "manage",
            "monitor",
          ]
        }
        editable={true}
        onChange={[Function]}
        role={
          Object {
            "elasticsearch": Object {
              "cluster": Array [],
              "indices": Array [],
              "remote_cluster": Array [],
              "run_as": Array [],
            },
            "kibana": Array [],
            "name": "",
          }
        }
      />
    </EuiFormRow>
  </EuiDescribedFormGroup>
  <EuiSpacer />
  <EuiDescribedFormGroup
    description={
      <p>
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Allow requests to be submitted on the behalf of other users. "
          id="xpack.security.management.editRole.elasticSearchPrivileges.howToBeSubmittedOnBehalfOfOtherUsersDescription"
        />
        <EuiLink
          className="editRole__learnMore"
          href="https://www.elastic.co/guide/en/elasticsearch/reference/mocked-test-branch/security-privileges.html#_run_as_privilege"
          target="_blank"
        >
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Learn more"
            id="xpack.security.management.editRole.elasticSearchPrivileges.learnMoreLinkText"
          />
        </EuiLink>
      </p>
    }
    title={
      <h3>
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Run As privileges"
          id="xpack.security.management.editRole.elasticSearchPrivileges.runAsPrivilegesTitle"
        />
      </h3>
    }
  >
    <EuiComboBox
      aria-label="Run as privileges"
      async={false}
      compressed={false}
      fullWidth={false}
      isClearable={true}
      isDisabled={false}
      onChange={[Function]}
      onCreateOption={[Function]}
      optionMatcher={[Function]}
      options={Array []}
      placeholder="Add a user…"
      selectedOptions={Array []}
      singleSelection={false}
      sortMatchesBy="none"
    />
  </EuiDescribedFormGroup>
  <EuiSpacer />
  <EuiTitle
    size="xs"
  >
    <h3>
      <MemoizedFormattedMessage
        defaultMessage="Index privileges"
        id="xpack.security.management.editRole.elasticSearchPrivileges.indexPrivilegesTitle"
      />
    </h3>
  </EuiTitle>
  <EuiSpacer
    size="s"
  />
  <EuiText
    color="subdued"
    size="s"
  >
    <p>
      <MemoizedFormattedMessage
        defaultMessage="Control access to the data in your cluster. "
        id="xpack.security.management.editRole.elasticSearchPrivileges.controlAccessToClusterDataDescription"
      />
      <EuiLink
        className="editRole__learnMore"
        href="https://www.elastic.co/guide/en/elasticsearch/reference/mocked-test-branch/security-privileges.html#privileges-list-indices"
        target="_blank"
      >
        <MemoizedFormattedMessage
          defaultMessage="Learn more"
          id="xpack.security.management.editRole.elasticSearchPrivileges.learnMoreLinkText"
        />
      </EuiLink>
    </p>
  </EuiText>
  <IndexPrivileges
    availableIndexPrivileges={
      Array [
        "all",
        "read",
        "write",
        "index",
      ]
    }
    editable={true}
    indexPatterns={Array []}
    indexType="indices"
    indicesAPIClient={
      Object {
        "getFields": [MockFunction],
      }
    }
    license={
      Object {
        "features$": Observable {
          "_subscribe": [Function],
        },
        "getFeatures": [MockFunction],
        "getLicenseType": [MockFunction],
        "getUnavailableReason": [MockFunction],
        "hasAtLeast": [MockFunction],
        "isEnabled": [MockFunction],
        "isLicenseAvailable": [MockFunction],
      }
    }
    onChange={[MockFunction]}
    role={
      Object {
        "elasticsearch": Object {
          "cluster": Array [],
          "indices": Array [],
          "remote_cluster": Array [],
          "run_as": Array [],
        },
        "kibana": Array [],
        "name": "",
      }
    }
    validator={
      RoleValidator {
        "buildFlavor": undefined,
        "shouldValidate": undefined,
      }
    }
  />
</CollapsiblePanel>
`;
